examples/test/testpolicy10020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10020
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key31: value8
      key2: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value20
          key27: value28
          key14: value9
      podSelector:
        matchLabels:
          key8: value21
          key27: value9
          key34: value21
